<resources>
    <string name="app_name">MovieTracker</string>
    <string name="added_genre">Added</string>
    <string name="removed_genre">Removed</string>
    <string name="choose_genre">Choose genres you want to WATCH!</string>
    <string name="no_selected_genre">Please select a least one genre type!</string>
    <string name="popularity_filter">Popularity</string>
    <string name="rating_filter">Rating</string>
    <string name="actor_real_name">Real name:\u0020</string>
    <string name="actor_movie_name">Movie name:\u0020</string>
    <string name="release_date_filter">Release Date</string>
    <string name="title_filter">Title</string>
    <string name="desc_text_view_text">Desc</string>
    <string name="asc_filter_text_view">Asc</string>
    <string name="cast_title">Cast</string>
    <string name="review_title_text">Review</string>
    <string name="failed_review_download">Review download failed!</string>
    <string name="failed_video_url_download">Video url download failed!</string>
    <string name="failed_cast_list_download">Cast list download failed!</string>
    <string name="failed_genre_download">Genres download failed!</string>
    <string name="done_filter_button">Done</string>
    <string name="review_video_text">Videos</string>
    <string name="youtube_recommendation">Youtube recommendation</string>
    <string name="invalid_video_link">Invalid video!</string>
    <string name="unknown_genre">Unknown</string>
    <string name="online_mode">Internet connection is available!</string>
    <string name="offline_mode">Internet connection is not available!</string>
    <string name="percent">%</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order_by">Order by....</string>
    <string name="include_adult">Include Adult</string>
    <string name="a_simple_image">A simple image…</string>
    <string name="good_news">Good news…</string>
    <string name="bad_news">Bad news…</string>
    <string name="error">Error</string>
    <string name="no_reviews_found">Review list not found</string>
    <string name="no_cast_list_found">Cast list not found</string>
    <string name="no_video_list">Video list not found</string>
    <string name="no_description_found">Description not found</string>
    <string name="select_something">Please select at least one genre, or enter a keyword</string>
    <string name="select_only_one">Select genre(s) or enter a keyword</string>
    <string name="no_more_results">No more results found</string>
    <string name="keyword">Keyword:\u0020</string>
    <string name="enter_a_keyword">Enter a keyword</string>
    <string name="no_result_found">No result found</string>
    <string name="report">Report</string>
    <string name="something_went_wrong">Something went wrong!</string>

</resources>
