<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp">

    <Button
        android:id="@+id/done_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/done_filter_button"
        android:textColor="@color/colorBlack"
        android:nextFocusUp="@id/order_by_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_by_layout" />

    <LinearLayout
        android:id="@+id/order_by_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/done_filter_button"
        app:layout_constraintStart_toEndOf="@+id/filter_radio_group"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:gravity="top"
            android:text="@string/order_by" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="top"
            android:text="@string/desc_text_view_text" />

        <Switch
            android:id="@+id/order_by_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:rotation="90"
            android:nextFocusDown="@id/done_filter_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/asc_filter_text_view" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/include_adult_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/done_filter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/order_by_layout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="top"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/include_adult" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="top"
            android:text="@string/yes" />

        <Switch
            android:id="@+id/include_adult_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:rotation="90"
            android:nextFocusDown="@id/done_filter_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/no" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/filter_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity_filter"
            android:nextFocusRight="@id/order_by_switch"/>

        <RadioButton
            android:id="@+id/radio_rating"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_filter"
            android:nextFocusRight="@id/order_by_switch"/>

        <RadioButton
            android:id="@+id/radio_release_date"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date_filter"
            android:nextFocusRight="@id/order_by_switch"/>

        <RadioButton
            android:id="@+id/radio_title"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_filter"
            android:nextFocusDown="@id/done_filter_button"
            android:nextFocusRight="@id/order_by_switch"/>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>